# udesk-api

./: .gitignore  Cargo.toml  DESCRIPTION.md  docker-compose.yml
.cargo/: config.toml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/api/: mod.rs  mw_auth.rs  routes_auth.rs  routes_companies.rs  routes_tickets.rs  routes_users.rs
src/model/: company.rs  department.rs  mod.rs  ticket.rs  user.rs
