[package]
name = "udesk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["mysql"]
mysql = []
memory = []
